# genomeforge

./: .gitignore  biome.json  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/desktop-mac/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop-mac/src/: index.css
apps/desktop-mac/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-mac/src-tauri/icons/: README.md
apps/desktop-mac/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop-windows/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop-windows/src/: App.tsx  index.css
apps/desktop-windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-windows/src-tauri/icons/: README.md
apps/desktop-windows/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/marketing/: package.json  tailwind.config.js  tsconfig.json
apps/marketing/app/: globals.css  layout.tsx  page.tsx
apps/mobile/: .gitignore  app.json  expo-env.d.ts  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  chat.tsx  export.tsx  family.tsx  notifications.tsx  search.tsx
apps/mobile/assets/: .gitkeep
apps/mobile/components/: LockScreen.tsx  index.ts
apps/mobile/hooks/: useGenomeProcessing.ts
apps/mobile/services/: aiChat.ts  biometricAuth.ts  dataExport.ts  familySharing.ts  genomeAnalysis.ts  genomeParser.ts  index.ts  notifications.ts  reportGenerator.ts  variantAnalysis.ts  variantSearch.ts
apps/mobile/store/: analysis.ts  auth.ts  chat.ts  family.ts  notifications.ts  reports.ts
apps/web/: index.html  package.json  tailwind.config.js
databases/: README.md
docs/: ARCHITECTURE_PATTERNS.md  DEMO_MODE.md  FEATURE_BACKLOG.md  INDEX.md  PRIVACY_ARCHITECTURE.md  ROADMAP.md
roadmap/: WORK_STATUS.md
(+53 files in other folders)
